added the rest of the page

--- a/index.html
+++ b/index.html
@@ -8,23 +8,26 @@
 	<title>My Portofolio</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="manifest" href="/site.webmanifest">
+	<link rel="stylesheet" media="screen and (max-width:800px)" href="tablet.css"> 
+	<link rel="stylesheet" media="screen and (max-width:530px" href="phone.css">
 	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 	<nav class="navbar">
 		<ul>
-			<li><a hreff="#">Home</a></li>
-			<li><a hreff="#">About Me</a></li>
-			<li><a hreff="#">Portofolio</a></li>
-			<li><a hreff="#">Services</a></li>
-			<li><a hreff="#">Contact Me</a></li>
+			<li><a href="#home">Home</a></li>
+			<li><a href="#about">About Me</a></li>
+			<li><a href="#portfolio">Portofolio</a></li>
+			<li><a href="#services">Services</a></li>
+			<li><a href="#contact">Contact Me</a></li>
 		</ul>
 	</nav>
 
 	<section id="home">
 		<div class="main">
-			<h1 class="heading">I AM <br> OLJA <br> PRIYAKOVICH </h1>
+			<h1 class="heading">I AM <br> OLJA PRIYAKOVICH </h1>
 			<button class="btn">
 				Hire Me
 			</button>
@@ -34,35 +37,83 @@
 	<section id="about">
 		<h1 class="heading">ABOUT ME</h1>
 		<div id="pic">
-			<img src="oljapic.jpg" alt="">
+			<img src="images.jpg/oljapic.jpg" alt="">
 			<div id="intro">
 				<h2>OLJA PRIYAKOVICH</h2>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea ad minima provident est iusto sequi
-					commodi,
-					cupiditate soluta optio sit eaque adipiscilaborum rem quas, quis consectetur omnisblanditiis neque
-					iure
-					accusantium recusandae quasi perspiciatis enim!Deleniti labore quis corrupti nulla laborumollitia,
-					voluptatem, fugit exercitationem ex dolorum abfacilis saepe inventore. Tempore ipsam,
-					pariaturveritatis
-					umque voluptatem necessitatibus. Assumendadelectus ipsa laudantium porro eligendi minima
-					involuptatibus
-					numquam debitis quas! Dolores adipisci ad vitaevoluptatem harum dicta molestias aperiam
-					odiodelectus, maxime
-					consectetur dignissimos esse aliquam vero ipsum,inventore saepe deserunt. Repellendus, esse.Dolores,
-					voluptas similique. Veniam, praesentium et.</p>
+					commodi,cupiditate soluta optio sit eaque adipiscilaborumrem quas, quis consectetur omnisblanditiis
+					nequeiureaccusantium recusandae quasi perspiciatisenim!Deleniti labore quis corrupti
+					nullalaborumollitiavoluptatem, fugit exercitationem ex dolorumabfacilis saepe inventore. Tempore
+					ipsam,
+					pariaturveritatisumque voluptatem necessitatibus. Assumendadelectusipsa laudantium porro eligendi
+					minima
+					involuptatibusnumquam debitis quas! Dolores adipisci advitaevoluptatem harum dicta molestias aperiam
+					diodelectus, maximeconsectetur dignissimos esse aliquam vero ipsuminventore saepe deserunt.
+					Repellendus, esse.Dolores,voluptas similique. Veniam, praesentium et.</p><br>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ut saepe officia sed corrupti unde
+					corporis laudantium quam magnam. Inventore explicabo omnis temporibus alias possimus facilis quis
+					aperiam ea qui, ad impedit libero enim cum deserunt praesentium similique reiciendis minima placeat
+					accusamus dolore harum minus. Odio hic corrupti commodi natus eaque harum, voluptatibus iste nihil
+					eligendi ex velit possimus quidem adipisci. Magnam sapiente nulla blanditiis ex asperiores enim quos
+					sequi officiis ipsum ducimus. Libero molestiae repellendus fugiat harum iste architecto cum illo?
+					Labore velit veniam dolor excepturi eius vero, amet eos consectetur sint laborum? Provident
+					voluptatibus cupiditate laudantium porro optio!</p>
 			</div>
 		</div>
 	</section>
 	<section id="portfolio">
 		<h1 class="heading">PORTFOLIO</h1>
 		<div class="gallery">
-			<img src="pic1.jpg" alt="">
-			<img src="pic2.jpg" alt="">
-			<img src="pic3.jpg" alt="">
-			<img src="pic4.jpg" alt="">
-			<img src="pic5.jpg" alt="">
-			<img src="pic6.jpg" alt="">
+			<img src="images.jpg/pic1.jpg" alt="">
+			<img src="images.jpg/pic2.jpg" alt="">
+			<img src="images.jpg/pic3.jpg" alt="">
+			<img src="images.jpg/pic4.jpg" alt="">
+			<img src="images.jpg/pic5.jpg" alt="">
+			<img src="images.jpg/pic6.jpg" alt="">
 		</div>
+	</section>
+
+	<section id="services">
+		<h1 class="heading">SERVICES</h1>
+		<div class="row">
+			<div class="box">
+				<img src="services2.png" alt="">
+				<h1 class="heading">Website Design</h1>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat molestias, quae, hic fugit amet
+					rem necessitatibus excepturi autem dolore obcaecati tempore. Id inventore laborum tempora voluptatem
+					dicta molestias eum molestiae.
+				</p>
+			</div>
+			<div class="box">
+				<img src="services1.png" alt="">
+				<h1 class="heading">UX/UI <br> Design</h1>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat molestias, quae, hic fugit amet
+					rem necessitatibus excepturi autem dolore obcaecati tempore. Id inventore laborum tempora voluptatem
+					dicta molestias eum molestiae.
+				</p>
+			</div>
+			<div class="box">
+				<img src="services3.png" alt="">
+				<h1 class="heading">Digital Marketing</h1>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat molestias, quae, hic fugit amet
+					rem necessitatibus excepturi autem dolore obcaecati tempore. Id inventore laborum tempora voluptatem
+					dicta molestias eum molestiae.
+				</p>
+			</div>
+		</div>
+	</section>
+
+	<section id="contact">
+		<h1 class="heading">CONTACT</h1>
+		<form action="" class="form">
+			<input type="text" name="name" class="input" placeholder="Enter Your Name">
+			<input type="email" name="email" class="input" placeholder="Enter Your Email">
+			<textarea name="msg" id="msg" cols="30" rows="10" placeholder="Enter Your Message"></textarea>
+			<input type="submit" value="SEND" id="send">
+		</form>
 	</section>
 
 
